# con_test

./: .gitignore  README.md  pyproject.toml  run_gui.bat  run_gui.sh
docs/: REQUIREMENTS.md  手柄测试与校准工具操作说明.md
src/controller_mapper/: __init__.py  capture.py  cli.py  constants.py  gui.py  gui_model.py  mapping_io.py  models.py  monitor.py  normalize.py  sdl.py
tests/: test_cli.py  test_gui.py  test_gui_model.py  test_mapping_io.py  test_monitor.py  test_normalize.py  test_sdl.py
