[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "controller-mapper"
version = "0.1.0"
description = "Interactive SDL-style controller mapping collector built on pygame."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
controller-mapper = "controller_mapper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
